# opengl

./: CMakeLists.txt  README.md
include/glad/: glad.h
include/learnopengl/: camera.h  shader_s.h
shaders/: lampshader.fs  shader.fs  shader.vs
src/: camera.cpp  change_image.cpp  glad.c  main.cpp  shader_s.cpp
